# pdf-tei-editor

./: .dockerignore  .env.deploy.demo.localhost  .env.deploy.example.org  .env.development  .env.dist  .env.production  .gitignore  2025-07-30-this-session-is-being-continued-from-a-previous-co.txt  2025-08-28-so-far-the-xpath-expressions-used-for-navigation.txt  ACCESS_CONTROL_WORK.md  CLAUDE.md  Dockerfile  Dockerfile.optimized  Dockerfile.simple-optimized  FIX-TESTS-PLAN.md  GEMINI.md  README.md  SOURCE_TARGET_EDITOR_PLAN.md  conversation.txt  docker-compose.test.yml  filter-by-model-conversation.txt  flask_app.py  jsdoc.json  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  pyrightconfig.json  requirements.txt  rollup.config.highlight.js  rollup.config.js  run_fastapi.py  test-extractors.cjs  test-output.txt  users.json.dist
.claude/: settings.json  settings.local.json
.husky/: commit-msg  commit-msg.py  pre-commit  pre-commit.py  pre-push  pre-push.js  pre-push.py  smart-test-runner.js
api/: config.py  extract.py  file-list.py  files.py  llamore.py  upload.py  validate.py
app/: CLAUDE.md
backend/: config.py  migration-guide.md
config/: config.json  projects.json  prompt.json  tei-dedup.json  tei-no-dedup.json  users.json
data/: config.json  files.json  prompt.json  tei.json
docker/: build-and-push.sh  entrypoint-ci.sh  entrypoint-test.sh  entrypoint.sh  import-demo-data.sh  reset-demo-nightly.sh  setup-cron.sh  setup-demo.sh
docs/: about.md  access-control.md  authentication.md  collection-management.md  configuration.md  (+20 more)
(+1363 files in other folders)
