[project]
name = "pdf-tei-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "llamore>=0.2.0",
    "lxml>=5.3.1",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "routes>=2.5.1",
    "waitress>=3.0.2",
    "webdav4[fsspec]>=0.10.0",
    "xmlschema>=3.4.5",
]

[tool.uv.sources]
llamore = { git = "https://github.com/mpilhlt/llamore.git" }

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.18.2",
    "pydeps>=3.0.1",
    "pytest>=8.4.0",
    "pytest-tap>=3.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
